# yogurt

./: .eslintrc.cjs  Makefile  README.md  flake.nix  index.html  meta.json  package-lock.json  package.json  shell.nix  vite.config.ts
.github/workflows/: ci.yml  rust-clippy.yml  tests.yml
src/: App.svelte  App.tsx  Left.svelte  Routes.tsx  index.tsx  left.css  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/accounts/: account.rs  add_account.rs  api_accounts.rs  mod.rs  store.rs  store_accounts.rs
src-tauri/src/instances/: config.rs  explorer.rs  instance.rs  java.rs  mod.rs
src-tauri/src/minecraft/: assets.rs  config.rs  download.rs  get_minecraft.rs  library.rs  mod.rs  run_minecraft.rs
src-tauri/src/mods/: fabric.rs  mod.rs
src-tauri/src/tools/: archives.rs  download.rs  file.rs  mod.rs  parse_path.rs  path.rs  request.rs  sha.rs
src-tauri/tests/: integration_test.rs
src-tauri/tests/tools/: file.rs  test_sha.rs
src/components/: Account.tsx  Accounts.tsx  Dashboard.tsx  Home.tsx  Settings.tsx  TopBar.tsx  Welcome.tsx
src/components/dashboard/: Dashboard.tsx
src/components/popups/: AddInstance.tsx  InstanceSettings.tsx  Login.tsx  SettingsDashboard.tsx
src/components/ui/: account.tsx  instanceCard.tsx  playerHead.tsx
src/context/: AccountContext.ts
src/lib/: NewInstance.svelte  NotifySound.ts  account_list.svelte  account_list.ts  addAccount.svelte  dropdown.svelte  image.svelte  version_list.svelte
