[package]
name = "yogurt"
version = "0.0.2"
description = "Minecraft launcher"
authors = ["godmod", "ModerNik"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
tauri = { version = "1.5.1", features = ["shell-open"] }
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.25.0", features = ["full"] }
home = "0.5.5"
bytes = "1.5.0"
toml = "0.8.2"
http = "0.2.9"
form_urlencoded = "1.1.0"
zip = "0.6.6"
flate2 = "1.0.27"
tar = "0.4.40"
futures = "0.3.28"
tauri-utils = "1.5.0"
sha1_smol = "1.0.0"

[dev-dependencies]
yogurt = { path = "./"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
